<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.snortum.javafx.multiscenefxml</groupId>
	<artifactId>javafx-multi-scene-fxml</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>javafx-multi-scene-fxml</name>
	<description>Demo of one way to use FXML in a multi-scene environment</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<build>
		<plugins>

			<!-- Compiling -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>

			<!-- Executing -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>net.snortum.javafx.multiscenefxml.SceneFxmlAppLauncher</mainClass>
					<arguments>--module-path /home/knute/java/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>JavaFX</id>
			<url>https://mvnrepository.com/artifact/org.openjfx/javafx-controls</url>
		</repository>

		<repository>
			<id>JavaFX-FXML</id>
			<url>https://mvnrepository.com/artifact/org.openjfx/javafx-fxml</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>

		<!-- JavaFX -->

		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>21</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>21</version>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<project>
						<description>
							javafx-multi-scene-fxml: Demo of one way to build multi-scene applications
						</description>
					</project>
					<show>protected</show>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
